# aidb

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.txt  README.md
proto/: service.proto
scripts/: WEBSOCKET_TEST_README.md  build_deb.sh  insert_dummy_nosql.sh  load_data.rs  test_aggregations.sh  test_websocket_demo.sh  test_websocket_publisher.py  test_websocket_subscriber.py  test_workflow.sh  text_search_data.json
scripts/packaging/: aidb-uninstall  aidb.service  control  postinst  postrm  prerm
src/: auth.rs  events.rs  indexing.rs  lib.rs  logging.rs  main.rs  models.rs  query.rs  rest.rs  session.rs  storage.rs
src/api/: grpc_server.rs
src/auth/: mod.rs
src/cache/: mod.rs
src/cluster/: mod.rs  raft.rs  rpc.rs  shard.rs
src/index/: hnsw.rs  ivf.rs  mod.rs
src/network/api/rest/: handlers.rs  middleware.rs  mod.rs  models.rs  state.rs
src/network/apis/: mod.rs
src/query/: aggregation.rs  cross_collection.rs  engine.rs  mod.rs  planner.rs  sql.rs  vector.rs
src/rag/: embeddings.rs  mod.rs  pipeline.rs  tokenizer.rs
src/storage/: columnar.rs  mod.rs  nosql.rs  sql.rs  vector.rs
src/tenants/: mod.rs  storage.rs
